--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "1.0.3",
     "axios": "1.6.8",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
     "fabric": "5.3.0",
+    "lucide-react": "0.378.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-image": "4.1.0",
     "react-router-dom": "6.23.0",
+    "tailwind-merge": "2.3.0",
+    "tailwindcss-animate": "1.0.7",
     "zustand": "4.5.2"
   },
   "devDependencies": {
@@ -34,6 +41,7 @@
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.4.3",
+    "tailwindcss-animated": "1.0.1",
     "typescript": "5.4.5",
     "vite": "4.5.3"
   }
