--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "fabric": "5.3.0",
+    "immer": "10.1.1",
+    "js-cookie": "3.0.5",
     "lucide-react": "0.378.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "1.5.0",
     "@types/fabric": "5.3.7",
+    "@types/js-cookie": "3.0.6",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
