--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fabric": "5.3.0",
     "immer": "10.1.1",
     "js-cookie": "3.0.5",
+    "konva": "9.3.6",
     "lucide-react": "0.378.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
