--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-image": "4.1.0",
+    "react-konva": "18.2.10",
     "react-router-dom": "6.23.0",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
