--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-radio-group": "1.1.3",
     "@radix-ui/react-scroll-area": "1.0.5",
+    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-switch": "1.0.3",
     "axios": "1.6.8",
@@ -31,6 +32,7 @@
     "react-router-dom": "6.23.0",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
+    "webfontloader": "1.6.28",
     "zustand": "4.5.2"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/webfontloader": "1.6.38",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
     "@vitejs/plugin-react-swc": "3.3.0",
