--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "1.6.8",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "embla-carousel-react": "8.1.3",
     "fabric": "5.3.0",
     "immer": "10.1.1",
     "js-cookie": "3.0.5",
