--- a/package.json
+++ b/package.json
@@ -1,65 +1,66 @@
 {
-  "name": "webster_frontend",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@radix-ui/react-avatar": "1.0.4",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-icons": "1.3.0",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-radio-group": "1.1.3",
-    "@radix-ui/react-scroll-area": "1.0.5",
-    "@radix-ui/react-select": "2.0.0",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-switch": "1.0.3",
-    "@radix-ui/react-tabs": "1.0.4",
-    "axios": "1.6.8",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
-    "embla-carousel-react": "8.1.3",
-    "immer": "10.1.1",
-    "js-cookie": "3.0.5",
-    "konva": "9.3.6",
-    "lucide-react": "0.378.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-image": "4.1.0",
-    "react-konva": "18.2.10",
-    "react-router-dom": "6.23.0",
-    "tailwind-merge": "2.3.0",
-    "tailwindcss-animate": "1.0.7",
-    "webfontloader": "1.6.28",
-    "zustand": "4.5.2"
-  },
-  "devDependencies": {
-    "@nabla/vite-plugin-eslint": "1.5.0",
-    "@types/js-cookie": "3.0.6",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "@types/webfontloader": "1.6.38",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
-    "@vitejs/plugin-react-swc": "3.3.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "postcss": "8.4.33",
-    "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "0.4.1",
-    "tailwindcss": "3.4.3",
-    "tailwindcss-animated": "1.0.1",
-    "typescript": "5.4.5",
-    "vite": "4.5.3"
-  }
+    "name": "webster_frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@radix-ui/react-avatar": "1.0.4",
+        "@radix-ui/react-checkbox": "1.0.4",
+        "@radix-ui/react-dialog": "1.0.5",
+        "@radix-ui/react-dropdown-menu": "2.0.6",
+        "@radix-ui/react-icons": "1.3.0",
+        "@radix-ui/react-label": "2.0.2",
+        "@radix-ui/react-radio-group": "1.1.3",
+        "@radix-ui/react-scroll-area": "1.0.5",
+        "@radix-ui/react-select": "2.0.0",
+        "@radix-ui/react-slot": "1.0.2",
+        "@radix-ui/react-switch": "1.0.3",
+        "@radix-ui/react-tabs": "1.0.4",
+        "axios": "1.6.8",
+        "class-variance-authority": "0.7.0",
+        "clsx": "2.1.1",
+        "embla-carousel-react": "8.1.3",
+        "immer": "10.1.1",
+        "js-cookie": "3.0.5",
+        "konva": "9.3.6",
+        "lucide-react": "0.378.0",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-image": "4.1.0",
+        "react-konva": "18.2.10",
+        "react-router-dom": "6.23.0",
+        "tailwind-merge": "2.3.0",
+        "tailwindcss-animate": "1.0.7",
+        "webfontloader": "1.6.28",
+        "zustand": "4.5.2"
+    },
+    "devDependencies": {
+        "@nabla/vite-plugin-eslint": "2.0.4",
+        "@types/js-cookie": "3.0.6",
+        "@types/node": "18.16.1",
+        "@types/react": "18.2.0",
+        "@types/react-dom": "18.2.1",
+        "@types/webfontloader": "1.6.38",
+        "@typescript-eslint/eslint-plugin": "5.59.1",
+        "@typescript-eslint/parser": "5.59.1",
+        "@vitejs/plugin-react-swc": "3.7.0",
+        "autoprefixer": "10.4.14",
+        "eslint": "8.45.0",
+        "eslint-config-prettier": "8.8.0",
+        "eslint-plugin-prettier": "4.2.1",
+        "eslint-plugin-react": "7.32.2",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "postcss": "8.4.33",
+        "prettier": "2.8.8",
+        "prettier-plugin-tailwindcss": "0.4.1",
+        "tailwindcss": "3.4.3",
+        "tailwindcss-animated": "1.0.1",
+        "typescript": "5.4.5",
+        "vite": "5.2.13"
+    }
 }
